Bug 98228 - [BAT IVB] HDMI *ERROR* EDID checksum is invalid
Summary: [BAT IVB] HDMI *ERROR* EDID checksum is invalid
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 98225 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-10-13 09:07 UTC by Imre Deak
Modified: 2017-07-24 22:40 UTC (History)
4 users (show)

See Also:
i915 platform: IVB
i915 features: display/HDMI


Attachments
Dmesg before run (89.79 KB, text/plain)
2016-10-13 10:49 UTC, Jani Saarinen
no flags Details
Dmesg during run (8.01 MB, text/plain)
2016-10-13 10:50 UTC, Jani Saarinen
no flags Details
igt log (41.53 KB, text/plain)
2016-10-13 10:50 UTC, Jani Saarinen
no flags Details

Description Imre Deak 2016-10-13 09:07:36 UTC
The following error occurs on IVB after various IGT KMS tests during HDMI detection:

[drm:drm_edid_block_valid] *ERROR* EDID checksum is invalid, remainder is 144

with varying remainder.

Just before this problem appeared in CI DRM 1701 build, a new HDMI monitor was connected to the machine (Acer G6 Series G246HYL).
Comment 1 Chris Wilson 2016-10-13 10:40:01 UTC
*** Bug 98225 has been marked as a duplicate of this bug. ***
Comment 2 Jani Saarinen 2016-10-13 10:49:48 UTC
Created attachment 127268 [details]
Dmesg before run
Comment 3 Jani Saarinen 2016-10-13 10:50:09 UTC
Created attachment 127269 [details]
Dmesg during run
Comment 4 Jani Saarinen 2016-10-13 10:50:28 UTC
Created attachment 127270 [details]
igt log
Comment 5 Jani Saarinen 2016-10-13 10:50:47 UTC
Added few attachments
Comment 6 yann 2016-10-14 07:09:43 UTC
Please re-test with Chris' patch https://patchwork.freedesktop.org/series/13747/
Comment 7 Jani Saarinen 2016-10-24 09:34:29 UTC
I cannot see error "*ERROR* EDID" message on dmesg on this patchwork run?
Comment 8 Jari Tahvanainen 2016-10-24 11:12:47 UTC
The challenge with Patchwork run for 13747 it that its test results are compared against the baseline that does not have the "EDID checksum is invalid" failure. If patch actually changes anything, then one should check that against e.g. 1711 with has many times:
CI_DRM_1711/fi-hsw-4770/igt@kms_pipe_crc_basic@nonblocking-crc-pipe-a-frame-sequence dmesg-fail with 
[  496.143887] [drm:drm_edid_block_valid] *ERROR* EDID checksum is invalid, remainder is 23
Comment 9 Jari Tahvanainen 2016-10-24 11:23:16 UTC
For IVB - like said by Imre, e.g. the following tests were getting this failure out
CI_DRM_1701/fi-ivb-3770/igt@kms_pipe_crc_basic@read-crc-pipe-a
[  511.374396] [drm:drm_edid_block_valid] *ERROR* EDID checksum is invalid, remainder is 50
CI_DRM_1701/fi-ivb-3770/igt@kms_pipe_crc_basic@read-crc-pipe-a
[  511.374999] [drm:drm_edid_block_valid] *ERROR* EDID checksum is invalid, remainder is 50
Comment 10 Chris Wilson 2016-11-06 17:25:10 UTC
Haven't seen the sporadic error messages for a while, presuming they are now squelched by

commit 14544d0937bf0160018a47ba74fff7fd61c22731
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Oct 24 12:38:21 2016 +0100

    drm/edid: Only print the bad edid when aborting
Comment 11 Ville Syrjala 2016-11-07 10:09:29 UTC
It worries me that we're now potentially hiding EDID read errors. Supposedly we're not hotplugging displays in CI, so there should never have been any EDID read errors.
Comment 12 Tvrtko Ursulin 2016-12-01 18:10:17 UTC
Got it in a CI run: https://intel-gfx-ci.01.org/CI/Patchwork_3162/fi-ivb-3770/igt@kms_pipe_crc_basic@bad-nb-words-1.html

[  321.247298] [drm:drm_edid_block_valid] *ERROR* EDID checksum is invalid, remainder is 77
Comment 13 Jani Saarinen 2016-12-05 12:54:13 UTC
Seen now many times on pw runs:
Eg again on https://intel-gfx-ci.01.org/CI/Patchwork_3186/
Comment 14 Tomeu Vizoso 2016-12-08 13:16:20 UTC
Just sent this one, but I wonder if it wouldn't be better if CI labs used KVMs that behaved correctly, as such a change has the potential of missing some error conditions.

https://patchwork.freedesktop.org/series/16556/
Comment 15 Tomeu Vizoso 2016-12-08 13:22:09 UTC
Forgot to mention that if I believe that this patch could help with the issue is because:

* Tomi confirmed that a KVM is being used for at least some of the machines that show this problem, and

* that the logs don't have an EDID dump right after the remainder line, which by reading the code means that the block with the wrong checksum is the CEA extension.
Comment 16 Jani Saarinen 2016-12-13 10:54:55 UTC
What is plan going forward here?
Comment 17 Jani Saarinen 2017-02-07 12:14:45 UTC
Jari, did you test behaviour?
Comment 18 Tomeu Vizoso 2017-02-09 15:27:10 UTC
(In reply to Jani Saarinen from comment #17)
> Jari, did you test behaviour?

The patch I sent has been merged already, so the EDID checksum warnings shouldn't appear any more in our CI.
Comment 19 Jani Saarinen 2017-02-13 08:47:08 UTC
Yes, resolving now as not now seen anymore on CI. If seen lets re-open


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.